objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>L2I_Initiate_Reset__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Initiate Reset</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2I_Install_Date__c</fullName>
        <label>Install Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>L2I_IntegrationMessage__c</fullName>
        <label>IntegrationMessage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_IntegrationStatus__c</fullName>
        <label>IntegrationStatus</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>L2I_IntegrationStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Lead_Id__c</fullName>
        <description>external id</description>
        <externalId>true</externalId>
        <label>L2I_Lead_Id</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>L2I_Leased_Aircraft_Quantity__c</fullName>
        <label>Leased Aircraft Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2I_Legacy_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This field is for DSS Opportunities and can only be updated by a user who has the Legacy Data Entry Permission Set</inlineHelpText>
        <label>Legacy Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2I_Marketing_Business_Proposal__c</fullName>
        <label>Marketing Business Proposal #</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Max_Impressions__c</fullName>
        <label>Max Impressions</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2I_NDA_Details__c</fullName>
        <label>NDA Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>L2I_NDA_Established__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NDA Established</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2I_NDA_Expiration_Date__c</fullName>
        <label>NDA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>L2I_NDA_OnFile__c</fullName>
        <description>Applicable only on Deal Opportunity record type and page layouts. (us2016)</description>
        <label>Is customer NDA valid?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_NRE_Invoicing_Description__c</fullName>
        <label>NRE Invoicing Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>L2I_NRE_Invoicing_Term__c</fullName>
        <label>NRE Invoicing Term</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Obsolescence_Provisions_Included__c</fullName>
        <label>Obsolescence Provisions Included</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Opp_Airline_Revenue_Share__c</fullName>
        <description>for advertising sales to enter the airline rev share for an opportunity</description>
        <inlineHelpText>Please enter the airline revenue share.</inlineHelpText>
        <label>Airline Revenue Share</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>L2I_Opportunity_ID__c</fullName>
        <displayFormat>{0000}</displayFormat>
        <label>Opportunity ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>L2I_Opportunity_Number__c</fullName>
        <description>Using Record Type Name to show RecordType Label with Opportunity Number.</description>
        <formula>IF( ( (RecordType.Name = &#39;PPL&#39; &amp;&amp; ISPICKVAL(PT_PPL_Type__c  , &#39;CR&#39;)|| Change_Request__c = TRUE) ) , &quot;CR-&quot; + L2I_Opportunity_ID__c, RecordType.Name+&quot;-&quot; + L2I_Opportunity_ID__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Oppt_Region__c</fullName>
        <formula>TEXT(Account.L2I_Region__c)</formula>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Original_Aircraft_Qty__c</fullName>
        <formula>Original_DSH__r.Aircraft_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Original Aircraft Qty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2I_Original_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunities (Original Opportunity)</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2I_Owner_same_as_Account__c</fullName>
        <label>Owner same as Account</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_P3_Average_Probability__c</fullName>
        <formula>((CASE(Text( L2I_Award_Probability__c ),&#39;10%&#39;,10,&#39;50%&#39;,50,&#39;100%&#39;,100,0))+(CASE(Text( L2I_Win_Probability__c ),&#39;10%&#39;,10,&#39;50%&#39;,50,&#39;75%&#39;,75,&#39;100%&#39;,100,0)))/200</formula>
        <inlineHelpText>Automated average of P1 (Award %) + P2 (Win %)</inlineHelpText>
        <label>P3 (Average %)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>L2I_PO_Issuer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PO Issuer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (PO Issuer)</relationshipLabel>
        <relationshipName>PO_Issuer_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2I_Parent_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Opportunity</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2</booleanFilter>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Sales, Amendment, Renewal</value>
            </filterItems>
            <filterItems>
                <field>Opportunity.RecordTypeId</field>
                <operation>equals</operation>
                <value>Deal</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Sales Opportunities</relationshipLabel>
        <relationshipName>ChildOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2I_Per_Shipset_Credit_Amount__c</fullName>
        <label>Per Shipset Credit Amount</label>
        <summarizedField>L2I_Credit__c.Credit_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>L2I_Credit__c.Credit_Type__c</field>
            <operation>equals</operation>
            <value>Shipset</value>
        </summaryFilterItems>
        <summaryForeignKey>L2I_Credit__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>L2I_Premium_Economy_Cabin_Configuration__c</fullName>
        <label>xxPremium Economy Cabin Configuration</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In-Seat Audio Only</fullName>
                </value>
                <value>
                    <fullName>None; N/A</fullName>
                </value>
                <value>
                    <fullName>Overhead + In-Seat Audio</fullName>
                </value>
                <value>
                    <fullName>Overhead Only (No In-Seat Audio)</fullName>
                </value>
                <value>
                    <fullName>PSS-Only</fullName>
                </value>
                <value>
                    <fullName>Seatback AVOD + Overhead</fullName>
                </value>
                <value>
                    <fullName>Seatback AVOD Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Pretax_Profit__c</fullName>
        <label>Pretax Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>L2I_PriceList_Description__c</fullName>
        <label>PriceList Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_PriceList_Name__c</fullName>
        <label>PriceList Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Pricing_Model__c</fullName>
        <label>Pricing Model</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tenancy</fullName>
                </value>
                <value>
                    <fullName>CPC</fullName>
                </value>
                <value>
                    <fullName>CPM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Primary_System_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary System Type</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.L2I_System_Type_Translation__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <infoMessage>System Type Translation must not be blank.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2I_Primary_Target_Program__c</fullName>
        <description>W-003749 - Formula field that gets the Program Number of the PPL Record.</description>
        <formula>HYPERLINK(&quot;/&quot; &amp; L2I_Program_Num__c, L2I_Program_Num__r.Name, &#39;_self&#39;)</formula>
        <label>Primary Target Program</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Product_Category__c</fullName>
        <label>Product Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Product_Category</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Program_Num__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Number</label>
        <referenceTo>PT_Program__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2I_Program_Number__c</fullName>
        <label>MCS Program Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Proposal_Date__c</fullName>
        <description>Field for advertising sales to enter the proposal date</description>
        <inlineHelpText>When is this presented to the customer?</inlineHelpText>
        <label>Proposal Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>L2I_Proposal_Due_Date_from_Quote__c</fullName>
        <formula>SBQQ__PrimaryQuote__r.L2I_Proposal_Due_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Proposal Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>L2I_Proposal_Type__c</fullName>
        <label>Proposal Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>RFI</fullName>
                </value>
                <value>
                    <fullName>RFP</fullName>
                </value>
                <value>
                    <fullName>Unsolicited</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Quip_New_Document_URL__c</fullName>
        <description>This field is used to store new Quip document URLs</description>
        <label>Quip New Document URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>L2I_Quip_Template_URL__c</fullName>
        <description>This field stores the Quip template URL</description>
        <label>Quip Template URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>L2I_Quote_Ordered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Quote Ordered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2I_Reason_Lost__c</fullName>
        <description>Picklist for advertising sales to list the reason lost</description>
        <inlineHelpText>Please select the reason why this opportunity was lost.</inlineHelpText>
        <label>Reason Lost</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TBD</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Record_Type__c</fullName>
        <formula>CASE( RecordType.DeveloperName , 
   &quot;Deal&quot;, 
      IMAGE(&quot;/resource/L2I_Oppty_RecType_Icons/oppty_deal.png&quot;, &quot;Deal Opportunity&quot;, 36,36),
   &quot;L2I_Advertising&quot;,
      IMAGE(&quot;/resource/L2I_Oppty_RecType_Icons/oppty_advertising.png&quot;, RecordType.Name, 36,36),
   &quot;Sales&quot;, 
      IMAGE(&quot;/resource/L2I_Oppty_RecType_Icons/oppty_sales.png&quot;, RecordType.Name, 36,36),
   &quot;Amendment&quot;, 
      IMAGE(&quot;/resource/L2I_Oppty_RecType_Icons/oppty_amendment.png&quot;, RecordType.Name, 36,36),
   &quot;Renewal&quot;, 
      IMAGE(&quot;/resource/L2I_Oppty_RecType_Icons/oppty_renewal.png&quot;, RecordType.Name, 36,36),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Related_Oracle_HW_Program_numbers__c</fullName>
        <label>Related Oracle HW Program numbers</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>L2I_Response_Due_Date_to_Sales_Team__c</fullName>
        <label>Response Due Date to Sales Team</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>L2I_Route_Supported__c</fullName>
        <label>Route Supported</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Long Haul</fullName>
                </value>
                <value>
                    <fullName>Medium Haul</fullName>
                </value>
                <value>
                    <fullName>Short Haul</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Sales_Opp_Quip_Template_URL__c</fullName>
        <defaultValue>&quot;https://panasonicwebteam.quip.com/mxBtAKSZz4mW/Sales-Opportunity-Plan?template=1&quot;</defaultValue>
        <label>Sales Opp Quip Template URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>L2I_Sales_Opp_Quip_URL__c</fullName>
        <label>Sales Opp Quip URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>L2I_Sales_Opportunity_Description__c</fullName>
        <formula>IF( Opportunity_Recordtype_Name__c == &#39;Deal&#39; , &#39;&#39;,
HYPERLINK(
&quot;/&quot; &amp; Id ,

IF ( L2I_AC_Operator__r.L2I_Operator_Number__c == &quot;&quot; , &quot;Unavailable&quot;, L2I_AC_Operator__r.L2I_Operator_Number__c ) &amp;
IF ( PL_Business_Pillars__c == &quot;&quot; , null, &quot; / &quot; &amp; PL_Business_Pillars__c) &amp;
IF ( TEXT( L2I_Fit_Type__c ) == &quot;&quot; , null, &quot; / &quot; &amp; TEXT( L2I_Fit_Type__c )) &amp;
IF ( L2I_Primary_System_Type__r.Name == &quot;&quot; , null, &quot; / &quot; &amp; L2I_Primary_System_Type__r.Name) &amp;
IF ( INCLUDES ( PT_Sub_System_Type__c , &quot;AUDIO/VIDEO&quot; ), &quot;-AUDIO/VIDEO&quot;,null ) &amp;
IF ( INCLUDES ( PT_Sub_System_Type__c , &quot;AVOD 1.0&quot; ), &quot;-AVOD 1.0&quot;,null ) &amp;
IF ( INCLUDES ( PT_Sub_System_Type__c , &quot;AVOD 1.5&quot; ), &quot;-AVOD 1.5&quot;,null ) &amp;
IF ( INCLUDES ( PT_Sub_System_Type__c , &quot;CMS&quot; ), &quot;-CMS&quot;,null ) &amp;
IF ( INCLUDES ( PT_Sub_System_Type__c , &quot;CSS&quot; ), &quot;-CSS&quot;,null ) &amp;
IF ( INCLUDES ( PT_Sub_System_Type__c , &quot;DAES&quot; ), &quot;-DAES&quot;,null ) &amp;
IF ( INCLUDES ( PT_Sub_System_Type__c , &quot;DIGITAL MPES&quot; ), &quot;-DIGITAL MPES&quot;,null ) &amp;
IF ( INCLUDES ( PT_Sub_System_Type__c , &quot;eFX&quot; ), &quot;-eFX&quot;,null ) &amp;
IF ( INCLUDES ( PT_Sub_System_Type__c , &quot;eX1&quot; ), &quot;-eX1&quot;,null ) &amp;
IF ( INCLUDES ( PT_Sub_System_Type__c , &quot;eX2&quot; ), &quot;-eX2&quot;,null ) &amp;
IF ( INCLUDES ( PT_Sub_System_Type__c , &quot;eX2 FOR B787&quot; ), &quot;-eX2 FOR B787&quot;,null ) &amp;
IF ( INCLUDES ( PT_Sub_System_Type__c , &quot;eX3&quot; ), &quot;-eX3&quot;,null ) &amp;
IF ( INCLUDES ( PT_Sub_System_Type__c , &quot;WIFI&quot; ), &quot;-WIFI&quot;,null ) &amp;
IF ( INCLUDES ( PT_Sub_System_Type__c , &quot;eXK&quot; ), &quot;-eXK&quot;,null ) &amp;
IF ( INCLUDES ( PT_Sub_System_Type__c , &quot;eXLite&quot; ), &quot;-eXLite&quot;,null ) &amp;
IF ( INCLUDES ( PT_Sub_System_Type__c , &quot;eXO&quot; ), &quot;-eXO&quot;,null ) &amp;
IF ( INCLUDES ( PT_Sub_System_Type__c , &quot;MOBILITY&quot; ), &quot;-MOBILITY&quot;,null ) &amp;
IF ( INCLUDES ( PT_Sub_System_Type__c , &quot;eXTV&quot; ), &quot;-eXTV&quot;,null ) &amp;
IF ( INCLUDES ( PT_Sub_System_Type__c , &quot;eXW&quot; ), &quot;-eXW&quot;,null ) &amp;
IF ( INCLUDES ( PT_Sub_System_Type__c , &quot;NEXT&quot; ), &quot;-NEXT&quot;,null ) &amp;
IF ( INCLUDES ( PT_Sub_System_Type__c , &quot;S3000&quot; ), &quot;-S3000&quot;,null ) &amp;
IF ( INCLUDES ( PT_Sub_System_Type__c , &quot;S3000i&quot; ), &quot;-S3000i&quot;,null ) &amp;
IF ( INCLUDES ( PT_Sub_System_Type__c , &quot;PRAM ONLY&quot; ), &quot;-PRAM ONLY&quot;,null ) &amp;
IF ( INCLUDES ( PT_Sub_System_Type__c , &quot;MPES&quot; ), &quot;-MPES&quot;,null ) &amp;
IF ( TEXT( L2I_AircraftQuantity__c ) == &quot;&quot;, null, &quot; / Qty &quot; &amp; TEXT( L2I_AircraftQuantity__c )) &amp;
IF ( L2I_Aircraft_Type__r.Name == &quot;&quot; , null, &quot; / &quot; &amp; L2I_Aircraft_Type__r.Name) &amp;
IF ( TEXT( SBQQ__PrimaryQuote__r.SBQQ__SubscriptionTerm__c ) == &quot;&quot;, null, &quot; / &quot; &amp; TEXT( SBQQ__PrimaryQuote__r.SBQQ__SubscriptionTerm__c ) &amp; &quot; Months&quot;)

,&quot;_self&quot;) 
)</formula>
        <label>Automated Sales Opportunity Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Shipping_Incoterm__c</fullName>
        <defaultValue>&quot;EXW – Ex Works&quot;</defaultValue>
        <label>Shipping/Incoterm</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EXW – Ex Works</fullName>
                    <default>true</default>
                    <label>EXW – Ex Works</label>
                </value>
                <value>
                    <fullName>FCA – Free Carrier</fullName>
                </value>
                <value>
                    <fullName>CPT – Carriage Paid to</fullName>
                </value>
                <value>
                    <fullName>CIP – Carriage and Insurance</fullName>
                </value>
                <value>
                    <fullName>DPU – Delivered at Place Unloaded</fullName>
                </value>
                <value>
                    <fullName>DAP – Delivered at Place</fullName>
                </value>
                <value>
                    <fullName>DDP – Delivery Duty Paid</fullName>
                </value>
                <value>
                    <fullName>FOB – Free on Board</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Short_Lead_Time__c</fullName>
        <formula>IF( OR ( AND
            ( 
               ISPICKVAL( L2I_Product_Category__c , &#39;IFEC&#39;), ISPICKVAL(L2I_Fit_Type__c,&#39;Retrofit&#39;) 
            ),
         (AND
             (
                ISPICKVAL( L2I_Product_Category__c , &#39;DSS&#39;), ISPICKVAL(L2I_Fit_Type__c, &#39;Renewal&#39;)
              )
          )
       )
, 
   IF(( L2I_First_Delivery_Date__c  -  CloseDate   &lt;= 425), True, False)
,
IF( OR ( AND
            ( 
               ISPICKVAL( L2I_Product_Category__c , &#39;IFEC&#39;), ISPICKVAL(L2I_Fit_Type__c,&#39;Production&#39;) 
            ),
         (AND
             (
                ISPICKVAL( L2I_Product_Category__c , &#39;DSS&#39;), ISPICKVAL(L2I_Fit_Type__c, &#39;Initial Sale&#39;)
              )
          ),
	 (AND
             (
                ISPICKVAL( L2I_Product_Category__c , &#39;DSS&#39;), ISPICKVAL(L2I_Fit_Type__c, &#39;Upsell/Follow-on&#39;)
              )
          )
       )
, 
   IF(( L2I_First_Delivery_Date__c  -  CloseDate   &lt;= 365), True, False)
,
   False
  )
  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Short Lead Time</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2I_Spares_Pricing_Contract_Terms__c</fullName>
        <label>Spares Pricing Contract Terms</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Standard_in_Warranty_TAT__c</fullName>
        <label>Standard in Warranty TAT</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes - 15 Business Days</fullName>
                </value>
                <value>
                    <fullName>No - 10 Business Days</fullName>
                </value>
                <value>
                    <fullName>No - 10 Calendar Days</fullName>
                </value>
                <value>
                    <fullName>No - 15 Calendar Days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Stretch_Target__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Stretch Target</description>
        <inlineHelpText>Will not drive demand, but identify alternate source of revenue.</inlineHelpText>
        <label>Stretch Target</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2I_Submission_Date_to_Sales_Team__c</fullName>
        <label>Submission Date to Sales Team</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>L2I_Targeting__c</fullName>
        <description>for advertising sales to choose the target market</description>
        <inlineHelpText>Please select all the customer target markets this opportunity applies to.</inlineHelpText>
        <label>Targeting</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Route</fullName>
                </value>
                <value>
                    <fullName>Cabin Class</fullName>
                </value>
                <value>
                    <fullName>Language</fullName>
                </value>
                <value>
                    <fullName>Category</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Top_Priority__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Top Priority</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2I_TotalAircraftMonthsinService__c</fullName>
        <description>Pulls in the months from the service schedule in order to get it to the quote for calculation</description>
        <formula>L2I_Delivery_Schedule__r.Total_Aircraft_Months_in_Service__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Aircraft Months in Service</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2I_Total_Credits__c</fullName>
        <formula>L2I_Total_Shipset_Credit_Amount__c  + L2I_Total_Non_Shipset_Credit_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Credits</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2I_Total_Impressions__c</fullName>
        <description>for advertising sales to enter total impressions for the opportunity</description>
        <inlineHelpText>Please enter the total impressions for this opportunity.</inlineHelpText>
        <label>Total Impressions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2I_Total_Non_Shipset_Credit_Amount__c</fullName>
        <label>Total Non-Shipset Credit Amount</label>
        <summarizedField>L2I_Credit__c.Credit_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>L2I_Credit__c.Credit_Type__c</field>
            <operation>notEqual</operation>
            <value>Shipset</value>
        </summaryFilterItems>
        <summaryForeignKey>L2I_Credit__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>L2I_Total_Seat_Count__c</fullName>
        <formula>SBQQ__PrimaryQuote__r.L2I_Total_Seat_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Seat Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2I_Total_Shipset_Credit_Amount__c</fullName>
        <formula>L2I_Per_Shipset_Credit_Amount__c *  L2I_AircraftQuantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Shipset Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2I_Unsolicited_Bid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unsolicited Bid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2I_VIP_VVIP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field is retired and not be used, replaced by Business Initiative field.</description>
        <label>xxx VIP / VVIP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2I_Warranty_Cost__c</fullName>
        <formula>IF(AND(L2I_Allow_Warranty_Fields__c, SBQQ__PrimaryQuote__r.L2I_Total_IFEC_HW_Cost__c &gt; 0),
    CASE(TEXT(L2I_Warranty__c), 
        &quot;36&quot;, 0, 
	&quot;48&quot;, 0,
	&quot;60&quot;, SBQQ__PrimaryQuote__r.L2I_Total_IFEC_HW_Cost__c * 0.0388, 
	0)
    ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Warranty Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2I_Warranty_Start_Date__c</fullName>
        <label>Warranty Start Date</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EIS Date</fullName>
                </value>
                <value>
                    <fullName>Ship Date</fullName>
                </value>
                <value>
                    <fullName>Installation Date</fullName>
                </value>
                <value>
                    <fullName>Manufacturing Date</fullName>
                </value>
                <value>
                    <fullName>Aircraft Delivery Date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Warranty__c</fullName>
        <label>Warranty Duration</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>36</fullName>
                </value>
                <value>
                    <fullName>48</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Win_Loss_Date__c</fullName>
        <description>This field will be used to capture Win/Loss Date when Opportunity stages reach Closed won, Closed lost, and no bid.</description>
        <label>Win/Loss Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>L2I_Win_Probability__c</fullName>
        <inlineHelpText>How likely is the customer to buy an IFEC solution from PAC? Select % Value: 10% = Competition is “Unknown or an Alternative Solution Preferred”, 50% = Competition is “Shared”, 75% = PAC is the “Front-Runner”, 100% = PAC is the “Only Alternative&quot;</inlineHelpText>
        <label>P2 (Win %)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0%</fullName>
                </value>
                <value>
                    <fullName>10%</fullName>
                </value>
                <value>
                    <fullName>50%</fullName>
                </value>
                <value>
                    <fullName>75%</fullName>
                </value>
                <value>
                    <fullName>100%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>One_PA_Headquarter_Fee__c</fullName>
        <formula>If( isPickval(L2I_Product_Category__c, &#39;PTS&#39;),SBQQ__PrimaryQuote__r.PTS_One_PA_Headquarter_Fee_Adjustment__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>One PA Headquarter Fee</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Opportunity_Link__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_260, FIND( &#39;/services&#39;, $Api.Partner_Server_URL_260)) + Id</formula>
        <label>Opportunity Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Recordtype_Name__c</fullName>
        <formula>RecordType.Name</formula>
        <label>Opportunity Recordtype Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_DSH__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Delivery Schedule</label>
        <referenceTo>L2I_DSH__c</referenceTo>
        <relationshipLabel>Amendment Renewal Opportunities</relationshipLabel>
        <relationshipName>AmendmentRenewalOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>P2__c</fullName>
        <formula>(Probability * 100)</formula>
        <inlineHelpText>How likely is the customer to buy an IFEC solution with PAC? 10% = Competition “Unknown or an Alternative Solution Preferred”. 50% = Competition is “Shared”. 75% = PAC is the “Front-Runner”. 100% = PAC is “Only Alternative”.</inlineHelpText>
        <label>P2(Win%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>